# aiush

./: .env  .gitignore  README.md  pyproject.toml
data/: discord.txt
src/aiush/: __init__.py  bot.py  preprocess.py  run.py  train.py
templates/: llama.j2
